# INFO-2602-Project

./: .gitignore  CID-Florence.postman_collection.json  Dockerfile  README.md  READMEFlor.md  Scanimal.postman_collection.json  main.py  pyproject.toml  requirements.txt
app/: cli.py  database.py  main.py
app/inference/: __init__.py  bioclip.py  florence.py
app/models/: animal.py  requests.py  user.py  user_animal.py
app/repositories/: user.py
app/routers/: __init__.py  admin_home.py  animals.py  collection.py  database.py  friends.py  index.py  leaderboard.py  profile.py  results.py  user_home.py
app/services/: auth_service.py
app/static/css/: app.css
app/static/js/: tree.js  upload.js
app/templates/: collection.html  database.html  friends.html  homepage.html  leaderboard.html  profile.html  results.html
app/utilities/: security.py  tree.py
inference/: __init__.py  bioclip.py  florence.py
