[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanimal"
version = "0.1.0"
description = "A Pokedex for real-life animals, built on top of the INFO-2602 FastAPI starter"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kwasi Edwards", email = "kwasiedwards@gmail.com" }
]
dependencies = [
    "fastapi==0.135.3",
    "fastapi-cli==0.0.24",
    "uvicorn[standard]==0.43.0",
    "sqlmodel==0.0.22",
    "jinja2==3.1.4",
    "itsdangerous==2.2.0",
    "pydantic-settings==2.6.1",
    "pwdlib[argon2]==0.2.1",
    "pyjwt==2.9.0",
    "typer==0.24.1",
    "email-validator==2.2.0",
    "python-multipart==0.0.22",
    "requests==2.33.1",
    "pillow==12.2.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "transformers==4.47.1",
    "einops==0.8.2",
    "timm==1.0.26",
    "pybioclip==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]
py-modules = ["main"]
